# kickable-rs

./: .gitattributes  .gitignore  .travis.yml  .woodpecker.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.aarch64-apple-darwin  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.cross  Dockerfile.x86_64-apple-darwin  Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-musl  Earthfile  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  TODO  bob.yaml  book.toml  build.rs  buildspec.yml  cloudbuild.yaml  depot.json  docker-compose.yaml  kickable.yaml  pre.sh  qodana.yaml  score.yaml  slim.report.json  waypoint.hcl  wrk.sh
.changes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.25.md
.changes/unreleased/: .gitkeep  Added-20230123-103028.yaml
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: checkmarx.yml  ci.yml  codeql.yml  contrast-scan.yml  dependency-review.yml  depot.yml  devskim.yml  earthly.yml  ethicalcheck.yml  frogbot-scan-pr.yml  label.yml  main.yml  pull.yml  push_pull.yml  qodana_code_quality.yml  release.yml  release_artifactory.yml  release_builder.yml  release_docker_hub.yml  release_docker_hub_amd64.yml  release_docker_hub_arm64.yml  release_ghcr.yml  release_ghcr_amd64.yml  release_ghcr_arm64.yml  rust-clippy.yml  scorecard.yml  snyk-container.yml  sonarcloud.yml  sonarqube.yml  stackhawk.yml  stale.yml  tag.yml  veracode.yml
.scannerwork/: report-task.txt
args/: Cargo.toml
args/src/: lib.rs  service.rs
docker/: Dockerfile  Dockerfile.aarch64-apple-darwin  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.builder  Dockerfile.cross  Dockerfile.x86_64-apple-darwin  Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-musl  docker-compose.yaml
docs/book/src/: SUMMARY.md
examples/: cargo-example.rs
i18n/: en-ES.ftl  en-US.ftl  fr-FR.ftl  ja-JP.ftl
meta/build-rust-action/: action.yml
proto/kickable/: kickable.proto
score/: .gitignore  axum.yaml  gotham.yaml  graphul.yaml  poem.yaml  rocket.yaml  rouille.yaml  salvo.yaml  tonic.yaml  trillium.yaml  viz.yaml  warp.yaml
scripts/: alpine-deps.sh  alpine-setup.sh  benchmark-setup.sh  benchmark.sh  build-setup.sh  ci-setup.sh  code-build-setup.sh  release-setup.sh  sonar-launch.sh  sonar-scan.sh  travis-setup.sh  ubuntu-deps.sh
src/: args.rs  config.rs  i18n.rs  kickable.rs  lib.rs  main.rs
src/args/: cli.rs  client.rs  mod.rs  service.rs
