[package]
name = "kickable"
authors = ["Hector Gray <defstream@gmail.com>"]
description = "kickable is a crate created to answer the age old question... Can I kick it?"
documentation = "https://docs.rs/kickable"
edition = "2021"
exclude = [
    "src/bin/deprecated",
    "scripts",
    "score",
    "*.hcl",
    "docker",
    "depot.json",
    "cloudbuild.yaml",
    "buildspec.yml",
    "renovate.json",
    "bob.yaml",
    ".changes",
    ".*",
]
keywords = ["kick", "kickable", "it", "can"]
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/defstream/kickable-rs"
version = "0.5.29"


[features]
complete = []

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.73"
axum = "0.6.20"
axum-tracing-opentelemetry = "0.14.1"
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
exitcode = "1.1.2"
fluent = "0.16.0"
gotham = "0.7.2"
graphul = "0.5.6"
hyper = { version = ">=0.14.27", features = ["http1", "http2", "runtime", "server", "stream"] }
log = "0.4.20"
once_cell = "1.18.0"
opentelemetry = "0.20.0"
poem = "1.3.58"
prost = "0.12.1"
rocket = "0.5.0-rc.3"
rouille = "3.6.2"
rust-embed = "8.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9"
time = { version = ">=0.3.29" }
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10.1"
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.4" , features = ["trace"] }
tracing-subscriber = "0.3.17"
unic-langid = { version = "0.9.1", features = ["macros"] }
viz = "0.4.15"
warp = "0.3.5"

[dev-dependencies]
assert_cli = "0.6.3"

[build-dependencies]
tonic-build = "0.10.1"
