[package]
name = "kickable"
authors = ["Hector Gray <defstream@gmail.com>"]
description = "kickable is a crate created to answer the age old question... Can I kick it?"
documentation = "https://docs.rs/kickable"
edition = "2021"
exclude = [
    "src/bin/deprecated",
    "scripts",
    "score",
    "*.hcl",
    "docker",
    "depot.json",
    "cloudbuild.yaml",
    "buildspec.yml",
    "renovate.json",
    "bob.yaml",
    ".changes",
    ".*",
]
keywords = ["kick", "kickable", "it", "can"]
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/defstream/kickable-rs"
version = "0.5.40"

[features]
complete = []

[dependencies]
anyhow = "1.0.79"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.77"
axum = "0.7.4"
axum-tracing-opentelemetry = "0.16.0"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.2"
exitcode = "1.1.2"
fluent = "0.16.0"
gotham = "0.7.2"
graphul = "1.0.1"
hyper = { version = ">=0.14.28", features = ["http1", "http2", "runtime", "server", "stream"] }
log = "0.4.20"
once_cell = "1.19.0"
opentelemetry = "0.21.0"
poem = "2.0.0"
prost = "0.12.3"
rocket = "0.5.0"
rouille = "3.6.2"
rust-embed = "8.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9"
time = { version = ">=0.3.31" }
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.1" , features = ["trace"] }
tracing-subscriber = "0.3.18"
unic-langid = { version = "0.9.4", features = ["macros"] }
viz = "0.4.17"
warp = "0.3.6"

[dev-dependencies]
assert_cli = "0.6.3"

[build-dependencies]
tonic-build = "0.10.2"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"
